--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -454,6 +454,9 @@ body {
   font-size: 2.8rem;
   align-self: center;
 }
+.calc__cta span {
+  font-weight: 400;
+}
 
 @media only screen and (min-width: 31em) {
   .calc__summary > *:nth-of-type(1) {
